--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,6 +32,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.664);
+
+    transition: width 0.3s, height 1s;
+    -o-transition-timing-function: ease;
 }
 
 section#login > div#imagem {
