--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -3,7 +3,7 @@
 @media screen and (min-width: 768px) and (max-width:992px) {
 
     body {
-        background-image: linear-gradient(to top, #212c03, #3d1502);
+        background-image: linear-gradient(to top, #171d06, #3d1502);
     }
     
     section#login {
@@ -34,13 +34,21 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
