--- a/estilos/style.css
+++ b/estilos/style.css
@@ -49,3 +49,9 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
 }
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
