--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,7 @@ section#login {
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.664);
 
@@ -55,3 +55,54 @@ div#formulario > h1 {
     margin-bottom: 10px;
 }
 
+form > div.campo {
+    background-color: #552111;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #516b20;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #344411;
+}
+
+form > a.bottom {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: #174d02;
+    color: rgb(255, 255, 255);
+    border: 1px solid #344411;
+    border-radius: 7px;
+    text-decoration: none;
+}
+
+form > a.bottom:hover {
+    background-color: #344411;
+}
+
+form > a.bottom > span {
+    font-size: 0.8em;
+}
