--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width:992px) {
+@media screen and (min-width: 768px) and (max-width:992px) { /*TABLET*/
 
     body {
         background-image: linear-gradient(to top, #171d06, #3d1502);
@@ -8,6 +8,7 @@
     
     section#login {
         width: 80vw;
+        height: 280px;
 
     }
 
@@ -24,13 +25,14 @@
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /*DESKTOP*/
 
     body {
         background-image: linear-gradient(to top, #212c03, #3d1502);
     }
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -49,6 +51,6 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
     }
 }
