--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,7 +24,6 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: white;
@@ -34,6 +33,7 @@ section#login {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.664);
 
     transition: width 0.3s, height 1s;
+    transform: translate(-50%, -50%);
     -o-transition-timing-function: ease;
 }
 
@@ -56,16 +56,40 @@ div#formulario > h1 {
 }
 
 form > div.campo {
-    background-color: #552111;
+    background-color: #3d1502;
+    border: 2px solid #6f942c; 
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;;
 }
 
 div.campo > label {
     display: none;
+}
+
+div.campo > span {
+    color: white;
+    background-color: 3d1502;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #16350a;
+    font-size: 1em;
+    width: calc(100% - 44.4px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+div.campo > input:focus-within {
+    background: rgb(150, 255, 164);
 }
 
 form > input[type=submit] {
